<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#b2b2b2"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="#eeeeee"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold" 
        android:text="@string/text_comments"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <TextView
            android:id="@+id/comment_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button"
            android:padding="10dp"
            android:text="@string/text_post"
            android:textColor="@color/text_color_selector"
            android:textSize="14sp"
            android:textStyle="bold" 
            android:clickable="true"/>
        
        <EditText 
            android:id="@+id/comment_list_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@id/comment_list_button"
            android:layout_toLeftOf="@id/comment_list_button"
            android:background="#ffffff"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:hint="@string/text_add_comment"/>
        
        <ListView
            android:id="@+id/comment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_above="@id/comment_list_button"
            android:background="@drawable/list_bg" />
    </RelativeLayout>

</LinearLayout>