<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@drawable/rounded_list_item"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@drawable/rounded_list_item_top"
            android:orientation="horizontal"
            android:padding="2dp" >

            <ImageView
                android:id="@+id/feed_item_user_profile_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/pic_desc"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/feed_item_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#eeeeee"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/feed_item_created_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#b2b2b2"
                    android:textIsSelectable="false"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="1dp"
            android:background="#434A5E" />

        <TextView
            android:id="@+id/feed_item_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:autoLink="web"
            android:textColor="#444466"
            android:textIsSelectable="false"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/feed_item_picture"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/pic_desc"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/feed_item_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:textColor="#b2b2b2"
            android:textIsSelectable="false"
            android:textSize="11sp"
            android:textStyle="bold" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="4dp"
            android:background="#eaeaea" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/rounded_list_item_bottom_view_unhover"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/feed_item_like_button_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_list_item_bottom_left"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/event_like_button_icon"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/text_like"
                    android:textColor="@color/event_button_text_color"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feed_item_unlike_button_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_list_item_bottom_left"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/event_unlike_button_icon"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/text_unlike"
                    android:textColor="@color/event_button_text_color"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/tabbar_separator" />

            <LinearLayout
                android:id="@+id/feed_item_comment_button_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_list_item_bottom_right"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/event_comment_button_icon"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/text_comment"
                    android:textColor="@color/event_button_text_color"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>